# reef

./: .gitignore  Cargo.toml  README.md
dynamic_island/: Cargo.toml
dynamic_island/resources/mascot/default/: pet.json
dynamic_island/src/: app_settings.rs  business.rs  display_settings.rs  host_platform.rs  island_widget_bridge.rs  lib.rs  mode_lifecycle.rs  monitor_manager.rs  native_panel_scene_input.rs  native_window.rs  preview_host.rs  state_machine.rs  updater_service.rs  view.rs
dynamic_island/src/native_panel_renderer/: close_preservation.rs  env_flags.rs  mod.rs  platform_adapter.rs  renderer_backend.rs  runtime_backend.rs  runtime_click.rs  runtime_commands.rs  runtime_hover.rs  runtime_polling.rs  runtime_scene_cache.rs  runtime_tests.rs  runtime_transition_slots.rs  snapshot_testing.rs  snapshot_tests.rs  test_fixtures.rs  traits.rs  window_message_pump.rs
dynamic_island/src/native_panel_renderer/snapshots/: dynamic_island__native_panel_renderer__snapshot_tests__snapshot_tests__card_single.snap  dynamic_island__native_panel_renderer__snapshot_tests__snapshot_tests__card_stacked_2.snap  dynamic_island__native_panel_renderer__snapshot_tests__snapshot_tests__card_stacked_3.snap  dynamic_island__native_panel_renderer__snapshot_tests__snapshot_tests__compact_initial.snap  dynamic_island__native_panel_renderer__snapshot_tests__snapshot_tests__empty_state.snap  dynamic_island__native_panel_renderer__snapshot_tests__snapshot_tests__expanded_full.snap  dynamic_island__native_panel_renderer__snapshot_tests__snapshot_tests__expanding_10.snap  dynamic_island__native_panel_renderer__snapshot_tests__snapshot_tests__expanding_25.snap  dynamic_island__native_panel_renderer__snapshot_tests__snapshot_tests__expanding_50.snap  dynamic_island__native_panel_renderer__snapshot_tests__snapshot_tests__expanding_75.snap  dynamic_island__native_panel_renderer__snapshot_tests__snapshot_tests__expanding_90.snap
dynamic_island/src/windows_native_panel/: direct2d.rs  directwrite.rs  dpi.rs  draw_presenter.rs  facade.rs  hit_region.rs  host_runtime.rs  host_runtime_close.rs  host_window.rs  layered_window.rs  message_dispatch.rs  mod.rs  paint_backend.rs  paint_bridge.rs  platform_loop.rs  renderer.rs  runtime_backend.rs  runtime_entry.rs  runtime_input.rs  runtime_traits.rs  window_shell.rs
dynamic_island/src/windows_native_panel/d2d_painter/: mod.rs  tests.rs
dynamic_island/src/windows_native_panel/tests/: mod.rs  renderer_tests.rs  runtime_tests.rs  status_close_tests.rs  window_shell_tests.rs
dynamic_island/src/windows_native_panel/window_shell/: tests.rs
echoisland-ui/: Cargo.toml
echoisland-ui/src/: lib.rs  updater_service.rs
echoisland-ui/src/native_panel_core/: animation.rs  card_metrics.rs  interaction.rs  lightweight_refresh.rs  mod.rs  queue.rs  reminder.rs  render.rs  settings.rs  style.rs  tests.rs  transitions.rs
echoisland-ui/src/native_panel_core/constants/: active_count.rs  animation.rs  cards.rs  geometry.rs  mascot.rs  mod.rs
echoisland-ui/src/native_panel_core/tests/: common.rs  layout_tests.rs  status_tests.rs
echoisland-ui/src/native_panel_scene/: build.rs  mod.rs  scene.rs  session_card_scene.rs  settings_scene.rs  tests.rs
echoisland-ui/src/native_panel_ui/: action_button_visual_spec.rs  animation_scheduler.rs  card_visual_spec.rs  close_preservation.rs  completion_glow_visual_spec.rs  descriptors.rs  mascot_sprite_spec.rs  render_commands.rs  transition_controller.rs  visual_primitives.rs
echoisland-ui/src/native_panel_ui/card_visual_spec/: tests.rs
echoisland-ui/src/native_panel_ui/descriptors/: tests.rs
echoisland-ui/src/native_panel_ui/visual_plan/: mascot.rs  mod.rs
examples/dynamic-island/: Cargo.toml  README.md
examples/dynamic-island/src/: business.rs  error.rs  host_platform.rs  island_widget_bridge.rs  lib.rs  main.rs  mod.rs  notification_sound.rs  page.rs  preview_host.rs  updater_service.rs  view.rs  window_operations.rs
examples/dynamic-island/src/business/: display_selection.rs  input.rs  mod.rs  tests.rs
examples/dynamic-island/src/native_panel_renderer/: facade.rs  host_runtime_command.rs  host_runtime_dispatch.rs  host_runtime_facade.rs  mod.rs  platform_adapter.rs  runtime_backend.rs  runtime_commands.rs  runtime_interaction.rs  runtime_platform_backend.rs  runtime_polling.rs  runtime_render_payload.rs  runtime_scene_cache.rs  runtime_scene_sync.rs  runtime_settings_surface.rs  runtime_tests.rs  shell_command.rs  shell_pump.rs  shell_state.rs  traits.rs  visual_plan.rs
examples/dynamic-island/src/windows_native_panel/: d2d_resource_cache.rs  directwrite.rs  dpi.rs  facade.rs  hit_region.rs  host_runtime.rs  host_runtime_animation_state.rs  host_runtime_close.rs  host_runtime_close_state.rs  host_runtime_host.rs  host_runtime_host_traits.rs  host_runtime_hover.rs  (+11 more)
examples/hello-reef/: Cargo.toml
examples/hello-reef/src/: main.rs
examples/reef-hello/: Cargo.toml
examples/reef-hello/src/: main.rs
framework/reef-dom/: Cargo.toml
framework/reef-dom/src/: host_config.rs  layout.rs  lib.rs  opaque.rs  paint.rs  renderer.rs  scene.rs
framework/reef-native-panel/: Cargo.toml
framework/reef-native-panel-core/: Cargo.toml
framework/reef-native-panel-core/src/: dynamic_island_interaction.rs  dynamic_island_page.rs  host_platform.rs  island_widget_bridge.rs  lib.rs  native_window.rs  notification_sound.rs  preview_host.rs  runtime_input.rs  updater_service.rs
framework/reef-native-panel-windows/: Cargo.toml
framework/reef-native-panel-windows/src/: config.rs  direct2d.rs  directwrite.rs  display_settings.rs  dpi.rs  hit_region.rs  layered_window.rs  lib.rs  native_window.rs  page.rs  panel_scene_service.rs  platform_loop_control.rs  resource_cache.rs  screen_geometry.rs  updater_service.rs  window_geometry.rs
framework/reef-native-panel/src/: lib.rs
framework/reef-reconciler/: Cargo.toml
framework/reef-reconciler/src/: arena.rs  fiber.rs  host_config.rs  lib.rs  reconcile.rs  work_loop.rs
framework/reef-ui/: Cargo.toml
framework/reef-ui/src/: lib.rs  panel.rs  panel_renderer.rs  scene_bridge.rs
(+593 files in other folders)
