[workspace]
members = [
    "dynamic_island",
    "echoisland-runtime",
    "reef-app",
    "reef-backend-d2d",
    "reef-core",
    "reef-layout",
    "reef-render",
    "reef-ui",
    "reef-widgets",
    "examples/hello-reef",
]
resolver = "2"

[workspace.dependencies]
tauri = { version = "2.8.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
log = "0.4"
tracing = "0.1"
thiserror = "2.0"
anyhow = "1.0"

[workspace.dependencies.windows]
version = "0.58"
features = [
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_System_Com",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
]

[workspace.dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]
