[package]
name = "dynamic_island"
version = "0.1.0"
edition = "2021"
description = "灵动岛 - 原生窗口扩展"
authors = ["Jason Young"]

[features]
default = []
tauri-host = ["dep:tauri", "dep:tauri-plugin-opener", "reef-ui/tauri-host"]

[dependencies]
tauri = { workspace = true, features = ["tray-icon", "image-png"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21.3"
dirs = "5.0"
tauri-plugin-opener = { version = "2", optional = true }

# 共享运行时类型
echoisland-runtime = { path = "../echoisland-runtime" }
reef-ui = { path = "../framework/reef-ui" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_Multimedia",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
insta = { version = "1.40", features = ["yaml"] }

[lib]
name = "dynamic_island"
crate-type = ["lib"]
