[package]
name = "echoisland-ui"
version = "0.1.0"
edition = "2021"
description = "EchoIsland native panel UI model and scene package"
authors = ["Jason Young"]

[features]
default = []
tauri-host = ["dep:tauri", "dep:tauri-plugin-opener"]

[dependencies]
echoisland-runtime = { path = "../echoisland-runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
tauri = { workspace = true, optional = true }
tauri-plugin-opener = { version = "2", optional = true }
log = { workspace = true }

[dev-dependencies]
insta = { version = "1.40", features = ["yaml"] }

[lib]
name = "echoisland_ui"
crate-type = ["lib"]
