[package]
name = "dynamic_island"
version = "0.1.0"
edition = "2021"
description = "灵动岛 - 原生窗口扩展"
authors = ["Jason Young"]

[dependencies]
echoisland-runtime = { path = "../../echoisland-runtime" }
reef-core = { path = "../../framework/reef-core" }
reef-view = { path = "../../framework/reef-view" }
reef-widgets = { path = "../../framework/reef-widgets" }
reef-native-panel-core = { path = "../../framework/reef-native-panel-core" }
reef-native-panel-windows = { path = "../../framework/reef-native-panel-windows" }

