[package]
name = "dynamic_island"
version = "0.1.0"
edition = "2021"
description = "灵动岛 - 原生窗口扩展"
authors = ["Jason Young"]

[dependencies]
echoisland-runtime = { path = "../../echoisland-runtime" }
chrono = { version = "0.4", features = ["serde"] }
reef-ui = { path = "../../framework/reef-ui" }
reef-native-panel-windows = { path = "../../framework/reef-native-panel-windows" }
