[package]
name = "reef-native-panel-core"
version = "0.1.0"
edition = "2021"
description = "Reef native panel shared contracts and preview helpers"

[dependencies]
echoisland-runtime = { path = "../../echoisland-runtime" }
reef-ui = { path = "../reef-ui" }
reef-widgets = { path = "../reef-widgets" }
chrono = { version = "0.4", features = ["serde"] }
log = { workspace = true }
tauri = { workspace = true, optional = true }
tauri-plugin-opener = { version = "2", optional = true }

[features]
default = []
tauri-host = ["dep:tauri", "dep:tauri-plugin-opener"]
