[package]
name = "reef-native-panel-windows"
version = "0.1.0"
edition = "2021"
description = "Reef native panel Windows adapter facade"

[dependencies]
reef-native-panel-core = { path = "../reef-native-panel-core" }
reef-ui = { path = "../reef-ui" }
echoisland-runtime = { path = "../../echoisland-runtime" }
tauri = { workspace = true, optional = true }
log = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
windows-sys = { workspace = true, features = ["Win32_System_Threading"] }

[features]
default = []
tauri-host = ["dep:tauri", "reef-native-panel-core/tauri-host"]
