[package]
name = "reef-native-panel-windows"
version = "0.1.0"
edition = "2021"
description = "Reef native panel Windows adapter facade"

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reef-core = { path = "../reef-core" }
reef-native-panel-core = { path = "../reef-native-panel-core" }
reef-render = { path = "../reef-render" }
reef-ui = { path = "../reef-ui" }
reef-view = { path = "../reef-view" }
reef-widgets = { path = "../reef-widgets" }
echoisland-runtime = { path = "../../echoisland-runtime" }
tauri = { workspace = true, optional = true }
log = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
windows-sys = { workspace = true, features = ["Win32_System_Threading", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse"] }

[features]
default = []
tauri-host = ["dep:tauri", "reef-native-panel-core/tauri-host"]

[dev-dependencies]
insta = { version = "1.40", features = ["yaml"] }
