[package]
name = "reef-native-panel"
version.workspace = true
edition.workspace = true
description = "Reef native panel runtime and platform host"

[features]
default = []
tauri-host = ["dep:tauri", "dep:tauri-plugin-opener"]

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
echoisland-runtime = { path = "../../echoisland-runtime" }
log = { workspace = true }
reef = { path = "../reef" }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true, optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tokio = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
windows-sys = { workspace = true, features = [
    "Win32_System_Threading",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[dev-dependencies]
insta = { version = "1.40", features = ["yaml"] }
