[package]
name = "reef-reconciler"
version.workspace = true
edition.workspace = true
description = "Fiber-based reconciler for the Reef UI framework — VNode diffing, work loop, scheduling"

[dependencies]
reef-core = { path = "../reef-core" }
reef-vnode = { path = "../reef-vnode" }
reef-hooks = { path = "../reef-hooks" }
