[package]
name = "reef-ui"
version = "0.1.0"
edition = "2021"
description = "Reef UI native panel model and scene package"
authors = ["Jason Young"]

[features]
default = []
tauri-host = ["dep:tauri", "dep:tauri-plugin-opener"]

[dependencies]
echoisland-runtime = { path = "../../echoisland-runtime" }
reef-core = { path = "../reef-core" }
reef-draw = { path = "../reef-draw" }
reef-theme = { path = "../reef-theme" }
reef-vnode = { path = "../reef-vnode" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
tauri = { workspace = true, optional = true }
tauri-plugin-opener = { version = "2", optional = true }
log = { workspace = true }

[dev-dependencies]
insta = { version = "1.40", features = ["yaml"] }

[lib]
name = "reef_ui"
crate-type = ["lib"]
